Modification des éléménts

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 <body>
     <header>
         <nav>
-            <a href="#" class="logo"><h3> < SS/ ></h3></a>
+            <a href="#" class="logo"><h3> < HJ/ ></h3></a>
             <div class="toggle">
-                <a class="open-menu" href="#"><img src="assets/pictures/home/icone-menu.png" alt="icone-menu"></a>
-                <a class="close-menu" href="#"><img src="assets/pictures/home/close.png" alt="icone-close"></a>
+                <div class="open-menu" href="#"><img src="assets/pictures/home/icone-menu.png" alt="icone-menu"></div>
+                <div class="close-menu" href="#"><img src="assets/pictures/home/close.png" alt="icone-close"></div>
             </div>
             <div class="menu">
-                <h3>< SS/ ></h3>
+                <h3>< HJ/ ></h3>
                 <ul class="link">
                     <li><a href="#about">À propos</a></li>
                     <li><a href="#work">Project</a></li>
@@ -59,9 +59,9 @@
                         </div>
                     </div>
                     <div class="home-social-link">
-                        <a href="#"><img src="assets/pictures/home/github.png" alt="github-link"></a>
-                        <a href="#"><img src="assets/pictures/home/skype.png" alt="skype-link"></a>
-                        <a href="#"><img src="assets/pictures/home/linkedin.png" alt="figma-link"></a>
+                        <a target="_blank" href="#"><img src="assets/pictures/home/github.png" alt="github-link"></a>
+                        <a target="_blank" href="https://join.skype.com/invite/CVovglAgLnQX"><img src="assets/pictures/home/skype.png" alt="skype-link"></a>
+                        <a target="_blank" href="https://www.linkedin.com/in/dinah-rakotondratsimba/"><img src="assets/pictures/home/linkedin.png" alt="figma-link"></a>
                     </div>
                 </div>
                 <div class="home-image">
@@ -97,39 +97,35 @@
                 </div>
                 <div class="skills-technologie-container">
                     <div class="skills-grid-technologie">
-                        <a href="#"><img src="assets/pictures/skills/html5.png" alt="icone-html5"></a>
+                        <img src="assets/pictures/skills/html5.png" alt="icone-html5">
                         <p>Html 5</p>
                     </div>
                     <div class="skills-grid-technologie">
-                        <a href="#"><img src="assets/pictures/skills/css3.png" alt="icone-css3"></a>
+                        <img src="assets/pictures/skills/css3.png" alt="icone-css3">
                         <p>Css 3</p>
                     </div>
                     <div class="skills-grid-technologie">
-                        <a href="#"><img src="assets/pictures/skills/git.png" alt="icone-git"></a>
+                        <img src="assets/pictures/skills/git.png" alt="icone-git">
                         <p>Git</p>
                     </div>
                     <div class="skills-grid-technologie">
-                        <a href="#"><img src="assets/pictures/skills/github-s.png" alt="icone-github"></a>
+                        <img src="assets/pictures/skills/github-s.png" alt="icone-github">
                         <p>GitHub</p>
                     </div>
                     <div class="skills-grid-technologie">
-                        <a href="#"><img src="assets/pictures/skills/vs-code.png" alt="icone-vs-code"></a>
+                        <img src="assets/pictures/skills/vs-code.png" alt="icone-vs-code">
                         <p>VS code</p>
                     </div>
                     <div class="skills-grid-technologie">
-                        <a href="#"><img src="assets/pictures/skills/webstorm.png" alt="icone-webstorm"></a>
+                        <img src="assets/pictures/skills/webstorm.png" alt="icone-webstorm">
                         <p>Webstorm</p>
                     </div>
                     <div class="skills-grid-technologie">
-                        <a href="#"><img src="assets/pictures/skills/figma.png" alt="icone-figma"></a>
+                        <img src="assets/pictures/skills/figma.png" alt="icone-figma">
                         <p>Figma</p>
                     </div>
                     <div class="skills-grid-technologie">
-                        <a href="#"><img src="assets/pictures/skills/figma.png" alt="icone-figma"></a>
-                        <p>Figma</p>
-                    </div>
-                    <div class="skills-grid-technologie">
-                        <a href="#"><img src="assets/pictures/skills/visily.png" alt="icone-visily"></a>
+                        <img src="assets/pictures/skills/visily.png" alt="icone-visily">
                         <p>Visily</p>
                     </div>
                     <!-- <div class="skills-grid-technologie">
@@ -137,7 +133,7 @@
                         <p>Bootstrap</p>
                     </div> -->
                     <div class="skills-grid-technologie">
-                        <a href="#"><img src="assets/pictures/skills/algorithme.png" alt="icone-algorithme"></a>
+                        <img src="assets/pictures/skills/algorithme.png" alt="icone-algorithme">
                         <p>Algotithme</p>
                     </div>
                 </div>
@@ -145,14 +141,14 @@
         </section>
         <section id="work">
             <div class="work-head">
-                <h4>Work</h4>
-                <p>Some of the noteworthy projects I have built:</p>
+                <h4>Project</h4>
+                <p>Les projects donc j'ai fait pour àmeliorer mon compétence:</p>
             </div>
             <div class="work-container">
                 <div class="work-row">
                     <div class="work-photos work-row-left">
-                        <a href="#">
-                            <img src="assets/pictures/work/work-img.png" alt="picture-work">
+                        <a class="link-picture-work"  href="#">
+                            <img src="assets/pictures/work/robbie.PNG" alt="picture-work">
                         </a>
                     </div>
                     <div class="work-text work-row-rigth">
@@ -196,15 +192,15 @@
                         </a>
                     </div>
                     <div class="work-photos work-row-rigth">
-                        <a href="#">
-                            <img src="assets/pictures/work/work-img.png" alt="picture-work">
+                        <a class="link-picture-work"  href="#">
+                            <img class="picture-work" src="assets/pictures/work/sagar.PNG" alt="picture-work">
                         </a>
                     </div>
                 </div>
                 <div class="work-row">
                     <div class="work-photos work-row-left">
-                        <a href="#">
-                            <img src="assets/pictures/work/work-img.png" alt="picture-work">
+                        <a class="link-picture-work"  href="#">
+                            <img class="picture-work" src="assets/pictures/work/dash.PNG" alt="picture-work">
                         </a>
                     </div>
                     <div class="work-text work-row-rigth">
@@ -232,27 +228,27 @@
         <section id="contact">
             <div class="contact-container">
                 <div class="contact-head">
-                    <h4>Get in touch</h4>
-                    <p>What’s next? Feel free to reach out to me if you're looking for a developer, have a query, or simply want to connect.</p>
+                    <h4>Entrer en contact</h4>
+                    <p>N'hésitez pas à me contacter si je suis util envers vous, avez une question ou souhaitez simplement vous connecter.</p>
                 </div>
                 <div class="contact-email-phone">
                     <div class="email-phone">
                         <img src="assets/pictures/work/email-icone.png" alt="icone-email">
-                        <p>reachsagarshah@gmail.com</p>
+                        <p>heritiana.rakotondratsimba@gmail.com</p>
                         <button><img src="assets/pictures/work/copy-icone.png" alt=""></button>
                     </div>
                     <div  class="email-phone">
                         <img src="assets/pictures/work/phone-icone.png" alt="phone-icone">
-                        <p>+91 8980500565</p>
+                        <p>+261328024615</p>
                         <button><img src="assets/pictures/work/copy-icone.png" alt="copu-icone"></button>
                     </div>
                 </div>
                 <div class="contact-platforms">
-                    <p>You may also find me on these platforms!</p>
+                    <p>Vous pouvez aussi me trouver sur ces plateformes !</p>
                     <div class="contact-link-platform">
                         <a href="#"><img src="assets/pictures/home/github.png" alt="github-link"></a>
-                        <a href="#"><img src="assets/pictures/home/twiter.png" alt="twitter-link"></a>
-                        <a href="#"><img src="assets/pictures/home/figma.png" alt="figma--link"></a>
+                        <a target="_blank" href="https://join.skype.com/invite/CVovglAgLnQX"><img src="assets/pictures/home/skype.png" alt="skype-link"></a>
+                        <a target="_blank" href="https://www.linkedin.com/in/dinah-rakotondratsimba/"><img src="assets/pictures/home/linkedin.png" alt="figma-link"></a>
                     </div>
                 </div>
             </div>
