Modification en html et work.css

--- a/index.html
+++ b/index.html
@@ -147,80 +147,132 @@
             <div class="work-container">
                 <div class="work-row">
                     <div class="work-photos work-row-left">
-                        <a class="link-picture-work"  href="#">
-                            <img src="assets/pictures/work/robbie.PNG" alt="picture-work">
+                        <a target="_blank" class="link-picture-work"  href="#">
+                            <img src="assets/pictures/work/portfolio.PNG" alt="picture-work">
                         </a>
                     </div>
                     <div class="work-text work-row-rigth">
-                        <h3>Fiskil</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec urna ac tellus volutpat viverra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae.</p>
+                        <h3>Mon portfolio</h3>
+                        <p>C'est mon portfolio en tant que developpeur web, il contient mes compétences et mes projects académiques et les reseaux sociaux qu'on peut communiquer avec moi.</p>
                         <div class="work-container-expertise">
-                            <div class="work-expertise">React</div>
-                            <div class="work-expertise">Next.js</div>
-                            <div class="work-expertise">Typescript</div>
-                            <div class="work-expertise">Nest.js</div>
-                            <div class="work-expertise">PostgreSQL</div>
-                            <div class="work-expertise">Tailwindcss</div>
+                            <div class="work-expertise">Html5</div>
+                            <div class="work-expertise">Css3</div>
                             <div class="work-expertise">Figma</div>
-                            <div class="work-expertise">Cypress</div>
-                            <div class="work-expertise">Storybook</div>
                             <div class="work-expertise">Git</div>
+                            <div class="work-expertise">GitHub</div>
+                        </div>                         
+                        <div class="link-projects-container">
+                            <a target="_blank" href="https://www.figma.com/file/sBnFUKyLZZ7itIPTiodY96/Personal-Portfolio-Website-Template-%7C-Mobile-%26-Desktop-(Community)?node-id=327%3A262&mode=dev" class="link-projects">
+                                <img src="assets/pictures/work/icon-external.png" alt="icon-external">
+                            </a>
+                            <a target="_blank" href="https://github.com/heritianajd/heritiana.git" class="link-projects">
+                                <img src="assets/pictures/work/github.png" alt="icon-external">
+                            </a>
                         </div>
-                        <a href="#" class="wingie">
-                            <img src="assets/pictures/work/icon-external.png" alt="icon-external">
-                        </a>
                     </div>
                 </div>
                 <div class="work-row">
                     <div class="work-text work-row-left">
-                        <h3>Fiskil</h3>
+                        <h3>Sagarshah</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec urna ac tellus volutpat viverra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae.</p>
                         <div class="work-container-expertise">
-                            <div class="work-expertise">React</div>
-                            <div class="work-expertise">Next.js</div>
-                            <div class="work-expertise">Typescript</div>
-                            <div class="work-expertise">Nest.js</div>
-                            <div class="work-expertise">PostgreSQL</div>
-                            <div class="work-expertise">Tailwindcss</div>
+                            <div class="work-expertise">Html5</div>
+                            <div class="work-expertise">Css3</div>
                             <div class="work-expertise">Figma</div>
-                            <div class="work-expertise">Cypress</div>
-                            <div class="work-expertise">Storybook</div>
                             <div class="work-expertise">Git</div>
+                            <div class="work-expertise">GitHub</div>
                         </div>
-                        <a href="#" class="wingie">
-                            <img src="assets/pictures/work/icon-external.png" alt="icon-external">
-                        </a>
+                        <div class="link-projects-container">
+                            <a target="_blank" href="https://www.figma.com/file/sBnFUKyLZZ7itIPTiodY96/Personal-Portfolio-Website-Template-%7C-Mobile-%26-Desktop-(Community)?node-id=327%3A262&mode=dev" class="link-projects">
+                                <img src="assets/pictures/work/icon-external.png" alt="icon-external">
+                            </a>
+                            <a target="_blank" href="https://github.com/heritianajd/sagarshah.git" class="link-projects">
+                                <img src="assets/pictures/work/github.png" alt="icon-external">
+                            </a>
+                        </div>
                     </div>
                     <div class="work-photos work-row-rigth">
-                        <a class="link-picture-work"  href="#">
+                        <a target="_blank" class="link-picture-work"  href="https://heritianajd.github.io/sagarshah/">
                             <img class="picture-work" src="assets/pictures/work/sagar.PNG" alt="picture-work">
                         </a>
                     </div>
                 </div>
                 <div class="work-row">
                     <div class="work-photos work-row-left">
-                        <a class="link-picture-work"  href="#">
-                            <img class="picture-work" src="assets/pictures/work/dash.PNG" alt="picture-work">
+                        <a target="_blank" class="link-picture-work"  href="https://heritianajd.github.io/robbie-lens/">
+                            <img class="picture-work" src="assets/pictures/work/robbie.PNG" alt="picture-work">
                         </a>
                     </div>
                     <div class="work-text work-row-rigth">
-                        <h3>Fiskil</h3>
+                        <h3>Robbie Lens</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec urna ac tellus volutpat viverra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae.</p>
                         <div class="work-container-expertise">
-                            <div class="work-expertise">React</div>
-                            <div class="work-expertise">Next.js</div>
-                            <div class="work-expertise">Typescript</div>
-                            <div class="work-expertise">Nest.js</div>
-                            <div class="work-expertise">PostgreSQL</div>
-                            <div class="work-expertise">Tailwindcss</div>
+                            <div class="work-expertise">Html5</div>
+                            <div class="work-expertise">Css3</div>
                             <div class="work-expertise">Figma</div>
-                            <div class="work-expertise">Cypress</div>
-                            <div class="work-expertise">Storybook</div>
                             <div class="work-expertise">Git</div>
+                            <div class="work-expertise">GitHub</div>
                         </div>
-                        <a href="#" class="wingie">
-                            <img src="assets/pictures/work/icon-external.png" alt="icon-external">
+                        <div class="link-projects-container">
+                            <a target="_blank" href="https://openclassrooms-student-center.github.io/1603881-creez-votre-site-web-avec-html5-et-css3/" class="link-projects">
+                                <img src="assets/pictures/work/icon-external.png" alt="icon-external">
+                            </a>
+                            <a target="_blank" href="https://github.com/heritianajd/robbie-lens.git" class="link-projects">
+                                <img src="assets/pictures/work/github.png" alt="icon-external">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="work-row">
+                    <div class="work-text work-row-left">
+                        <h3>Dashboard Mocup</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec urna ac tellus volutpat viverra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae.</p>
+                        <div class="work-container-expertise">
+                            <div class="work-expertise">Html5</div>
+                            <div class="work-expertise">Css3</div>
+                            <div class="work-expertise">Visily</div>
+                            <div class="work-expertise">Git</div>
+                            <div class="work-expertise">GitHub</div>
+                        </div>
+                        <div class="link-projects-container">
+                            <a target="_blank" href="https://app.visily.ai/projects/4f5b99bf-68c8-4755-8812-636f472f7ace/boards/447986" class="link-projects">
+                                <img src="assets/pictures/work/icon-external.png" alt="icon-external">
+                            </a>
+                            <a target="_blank" href="https://github.com/heritianajd/dashboard-mockup.git" class="link-projects">
+                                <img src="assets/pictures/work/github.png" alt="icon-external">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="work-photos work-row-rigth">
+                        <a target="_blank" class="link-picture-work"  href="https://heritianajd.github.io/dashboard-mockup/">
+                            <img class="picture-work" src="assets/pictures/work/dash.PNG" alt="picture-work">
                         </a>
+                    </div>
+                </div>
+                <div class="work-row">
+                    <div class="work-photos work-row-left">
+                        <a target="_blank" class="link-picture-work"  href="https://heritianajd.github.io/fisheye/">
+                            <img class="picture-work" src="assets/pictures/work/fisheye.PNG" alt="picture-work">
+                        </a>
+                    </div>
+                    <div class="work-text work-row-rigth">
+                        <h3>Fisheye</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec urna ac tellus volutpat viverra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae.</p>
+                        <div class="work-container-expertise">
+                            <div class="work-expertise">Html5</div>
+                            <div class="work-expertise">Css3</div>
+                            <div class="work-expertise">Figma</div>
+                            <div class="work-expertise">Git</div>
+                            <div class="work-expertise">GitHub</div>
+                        </div>
+                        <div class="link-projects-container">
+                            <a target="_blank" href="https://www.figma.com/file/Q3yNeD7WTK9QHDldg9vaRl/UI-Design-FishEye-FR?type=design&node-id=120-544&mode=design" class="link-projects">
+                                <img src="assets/pictures/work/icon-external.png" alt="icon-external">
+                            </a>
+                            <a target="_blank" href="https://github.com/heritianajd/fisheye.git" class="link-projects">
+                                <img src="assets/pictures/work/github.png" alt="icon-external">
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
