Modification dans html et emplacement de mon cv

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <p>Switch Theme</p>
                         <a class="dark-ligth-button" href="#"><img src="assets/pictures/home/dark-mode.png" alt=""></a>
                     </div>
-                    <a class="download-cv" href="#">Télécharger CV</a>
+                    <a target="_blank" class="download-cv" href="assets/cv/mon-vc.pdf">Télécharger CV</a>
                 </div>
             </div>
         </nav>
@@ -55,7 +55,7 @@
                         </div>
                         <div class="home-available">
                             <img src="assets/pictures/home/dot.png" alt="">
-                            <p>Available for new projects</p>
+                            <p>Disponible pour le stage en tant qu'intégrateur web</p>
                         </div>
                     </div>
                     <div class="home-social-link">
@@ -128,10 +128,6 @@
                         <img src="assets/pictures/skills/visily.png" alt="icone-visily">
                         <p>Visily</p>
                     </div>
-                    <!-- <div class="skills-grid-technologie">
-                        <a href="#"><img src="assets/pictures/skills/bootstrap.png " alt="icone-bootstrap"></a>
-                        <p>Bootstrap</p>
-                    </div> -->
                     <div class="skills-grid-technologie">
                         <img src="assets/pictures/skills/algorithme.png" alt="icone-algorithme">
                         <p>Algotithme</p>
@@ -174,7 +170,7 @@
                 <div class="work-row">
                     <div class="work-text work-row-left">
                         <h3>Sagarshah</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec urna ac tellus volutpat viverra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae.</p>
+                        <p>La portfolio de Sagar Shah, on peut voir ses compétences et ses projects et tant que Developpeur Web. C'est aussi la maquette de mon portfolio.</p>
                         <div class="work-container-expertise">
                             <div class="work-expertise">Html5</div>
                             <div class="work-expertise">Css3</div>
@@ -205,11 +201,10 @@
                     </div>
                     <div class="work-text work-row-rigth">
                         <h3>Robbie Lens</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec urna ac tellus volutpat viverra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae.</p>
+                        <p>La portfolio de Robbie Lens, c'est la prémiere éxercice à propos du HTML et CSS dans openclassrooms.</p>
                         <div class="work-container-expertise">
                             <div class="work-expertise">Html5</div>
                             <div class="work-expertise">Css3</div>
-                            <div class="work-expertise">Figma</div>
                             <div class="work-expertise">Git</div>
                             <div class="work-expertise">GitHub</div>
                         </div>
@@ -226,7 +221,7 @@
                 <div class="work-row">
                     <div class="work-text work-row-left">
                         <h3>Dashboard Mocup</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec urna ac tellus volutpat viverra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae.</p>
+                        <p>Une maquette dans Visily que j'ai utilisé pour améliorer mon compétence en html et css.Le code est un peu confus dans ce projet car je viens de commencer le HTML et CSS à ce moment là.</p>
                         <div class="work-container-expertise">
                             <div class="work-expertise">Html5</div>
                             <div class="work-expertise">Css3</div>
@@ -257,7 +252,7 @@
                     </div>
                     <div class="work-text work-row-rigth">
                         <h3>Fisheye</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec urna ac tellus volutpat viverra. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae.</p>
+                        <p>Site des photographes, en utilisant la maquette dans figma. Le code est intégré simplement avec HTML, CSS et un peu de Javascript. Je ne sais pas encore codé avec Javascript mais c'est un code copié.</p>
                         <div class="work-container-expertise">
                             <div class="work-expertise">Html5</div>
                             <div class="work-expertise">Css3</div>
@@ -296,7 +291,7 @@
                     </div>
                 </div>
                 <div class="contact-platforms">
-                    <p>Vous pouvez aussi me trouver sur ces plateformes !</p>
+                    <p>Vous pouvez aussi me trouver sur ces plateformes!</p>
                     <div class="contact-link-platform">
                         <a href="#"><img src="assets/pictures/home/github.png" alt="github-link"></a>
                         <a target="_blank" href="https://join.skype.com/invite/CVovglAgLnQX"><img src="assets/pictures/home/skype.png" alt="skype-link"></a>
@@ -307,7 +302,7 @@
         </section>
     </main>
     <footer>
-        <p><img src="assets/pictures/work/icone.png" alt="icone-c">2023 │<a href="#">Designed</a> and <a href="#">coded</a> with <span>♥</span> by Sagar Shah</p>
+        <p><img src="assets/pictures/work/icone.png" alt="icone-c">2023 │<a href="#">Designé</a> par Sagar Shah et <a href="#">codé</a> <span>♥</span> par Heritiana</p>
     </footer>
     <script src="script.js"></script>
 </body>
