Modification des css et en index.html

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 <div class="work-row">
                     <div class="work-text work-row-left">
                         <h3>Dashboard Mocup</h3>
-                        <p>Une maquette dans Visily que j'ai utilisé pour améliorer mon compétence en html et css.Le code est un peu confus dans ce projet car je viens de commencer le HTML et CSS à ce moment là.</p>
+                        <p>Une maquette dans Visily que j'ai utilisé pour améliorer mon compétence en html et css.</p>
                         <div class="work-container-expertise">
                             <div class="work-expertise">Html5</div>
                             <div class="work-expertise">Css3</div>
@@ -276,7 +276,7 @@
             <div class="contact-container">
                 <div class="contact-head">
                     <h4>Entrer en contact</h4>
-                    <p>N'hésitez pas à me contacter si je suis util envers vous, avez une question ou souhaitez simplement vous connecter.</p>
+                    <p>N'hésitez pas à me contacter ou m'envoyer des messages par email, avez une question ou souhaitez simplement vous connecter.</p>
                 </div>
                 <div class="contact-email-phone">
                     <div class="email-phone">
