modification sur html et css

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="home-text">
                     <div class="home-text1">
                         <h1>Salut, je m'appel Heritiana 👋</h1>
-                        <p>Je suis integrateur de site web junior. Je fait l'integration seulement avec HTML et CSS car je suis encore débutant dans le monde de création des sites web.</p>
+                        <p>Je suis integrateur de site web junior.</p>
                     </div>
                     <div class="home-text2">
                         <div class="home-text-location">
@@ -83,7 +83,6 @@
                         <p>Mon nom complet est RAKOTONDRATSIMBA Heritiana Jean Dinah, j'ai 19 ans et je suis Intégrateur de site web junior.</p>
                         <p>D'après l'obtention de mon diplôme baccalauréat en 2022, je me suis intéressé à la création de site web.</p>
                         <p>J'ai commencer à intégrer des sites avec html et css, en utilisant des maquettes dans figma et visily, ainsi que des éditeurs de text comme Visual Stusio Code et Webstorm.</p>
-                        <p>J'essaie d'améliorer mes connaissances et aussi d'en apprendre davantage sur le développement.</p>
                         <p>Vous pouvez avoir besoin de moi et je vous promets que je ferai ce que je peux même si je ne fait que débuter.</p>
                     </div>
                 </div>
@@ -170,7 +169,7 @@
                 <div class="work-row">
                     <div class="work-text work-row-left">
                         <h3>Sagarshah</h3>
-                        <p>La portfolio de Sagar Shah, on peut voir ses compétences et ses projects et tant que Developpeur Web. C'est aussi la maquette de mon portfolio.</p>
+                        <p>La portfolio de Sagar Shah. C'est aussi la maquette de mon portfolio.</p>
                         <div class="work-container-expertise">
                             <div class="work-expertise">Html5</div>
                             <div class="work-expertise">Css3</div>
@@ -201,7 +200,7 @@
                     </div>
                     <div class="work-text work-row-rigth">
                         <h3>Robbie Lens</h3>
-                        <p>La portfolio de Robbie Lens, c'est la prémiere éxercice à propos du HTML et CSS dans openclassrooms.</p>
+                        <p>La portfolio de Robbie Lens, c'est la prémiere éxercice à propos du HTML et CSS que j'ai fait dans openclassrooms.</p>
                         <div class="work-container-expertise">
                             <div class="work-expertise">Html5</div>
                             <div class="work-expertise">Css3</div>
@@ -219,9 +218,35 @@
                     </div>
                 </div>
                 <div class="work-row">
+                    <div class="work-photos work-row-left">
+                        <a target="_blank" class="link-picture-work"  href="https://heritianajd.github.io/fisheye/">
+                            <img class="picture-work" src="assets/pictures/work/fisheye.PNG" alt="picture-work">
+                        </a>
+                    </div>
+                    <div class="work-text work-row-rigth">
+                        <h3>Fisheye</h3>
+                        <p>Site des photographes, la deuxième site que j'ai crée avec html et css. J'utilise Figma pour la maquette.</p>
+                        <div class="work-container-expertise">
+                            <div class="work-expertise">Html5</div>
+                            <div class="work-expertise">Css3</div>
+                            <div class="work-expertise">Figma</div>
+                            <div class="work-expertise">Git</div>
+                            <div class="work-expertise">GitHub</div>
+                        </div>
+                        <div class="link-projects-container">
+                            <a target="_blank" href="https://www.figma.com/file/Q3yNeD7WTK9QHDldg9vaRl/UI-Design-FishEye-FR?type=design&node-id=120-544&mode=design" class="link-projects">
+                                <img src="assets/pictures/work/icon-external.png" alt="icon-external">
+                            </a>
+                            <a target="_blank" href="https://github.com/heritianajd/fisheye.git" class="link-projects">
+                                <img src="assets/pictures/work/github.png" alt="icon-external">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="work-row">
                     <div class="work-text work-row-left">
                         <h3>Dashboard Mocup</h3>
-                        <p>Une maquette dans Visily que j'ai utilisé pour améliorer mon compétence en html et css.</p>
+                        <p>En suite, j'ai intégré Dashbord Mocup pour savoir plus sur html et css. En utilisant le maquette dans visily</p>
                         <div class="work-container-expertise">
                             <div class="work-expertise">Html5</div>
                             <div class="work-expertise">Css3</div>
@@ -247,12 +272,12 @@
                 <div class="work-row">
                     <div class="work-photos work-row-left">
                         <a target="_blank" class="link-picture-work"  href="https://heritianajd.github.io/fisheye/">
-                            <img class="picture-work" src="assets/pictures/work/fisheye.PNG" alt="picture-work">
+                            <img class="picture-work" src="assets/pictures/work/house-hounter.PNG" alt="picture-work">
                         </a>
                     </div>
                     <div class="work-text work-row-rigth">
-                        <h3>Fisheye</h3>
-                        <p>Site des photographes, en utilisant la maquette dans figma. Le code est intégré simplement avec HTML, CSS et un peu de Javascript. Je ne sais pas encore codé avec Javascript mais c'est un code copié.</p>
+                        <h3>House Hounter</h3>
+                        <p>Un site des chercheurs de maison, en utilisant figma. Mon but c'est toujour améliorer de plus en plus mes compétences.</p>
                         <div class="work-container-expertise">
                             <div class="work-expertise">Html5</div>
                             <div class="work-expertise">Css3</div>
@@ -283,11 +308,6 @@
                         <img src="assets/pictures/work/email-icone.png" alt="icone-email">
                         <p>heritiana.rakotondratsimba@gmail.com</p>
                         <button><img src="assets/pictures/work/copy-icone.png" alt=""></button>
-                    </div>
-                    <div  class="email-phone">
-                        <img src="assets/pictures/work/phone-icone.png" alt="phone-icone">
-                        <p>+261328024615</p>
-                        <button><img src="assets/pictures/work/copy-icone.png" alt="copu-icone"></button>
                     </div>
                 </div>
                 <div class="contact-platforms">
